# GasSimulation

./: .gitignore  1.0.md  2.0.xml  2.1.xml  2.2.xml  2.3.xml  2.4.xml  2.5.xml  CMakeLists.txt  README.md  build.bat  build.ps1  commit_msg.txt  configure.ps1  src.xml  全部代码.xml
include/database/: DatabaseManager.h
include/models/: Task.h  TodoModel.h
src/: ColorMap.h  CsvFrameReader.h  EulerianSolver3D.cpp  EulerianSolver3D.h  ExporterCsv.h  GaussianPlumeModel  GaussianPlumeModel.cpp  GaussianPlumeModel.h  GaussianPuffModel.cpp  GaussianPuffModel.h  ISimulationModel.h  ITerrain.h  MainWindow.cpp  MainWindow.h  PlumeEngine.cpp  PlumeEngine.h  Simulator.cpp  Simulator.h  Simulator3D.cpp  Simulator3D.h  TerrainDem.h  TerrainProcedural.h  WindField.cpp  WindField.h
src_oldEditon/: CsvFrameReader.cpp  ExporterCsv.cpp  ExternalCfdBackend.cpp  ExternalCfdBackend.h  MainWindow.cpp  MainWindow.h  TerrainDem.cpp  TerrainFlat.h  TerrainProcedural.h
src_oldEditon/database/: DatabaseManager.cpp
src_oldEditon/tif/: 紫金山_演示数据.tif
tools/: dem_convert.py  run_mock_cfd.bat
架构重构&引擎接口src/: CsvFrameReader.cpp  CsvFrameReader.h  EulerianSolver3D.cpp  EulerianSolver3D.h  ExporterCsv.cpp  ExporterCsv.h  ExternalCfdBackend.h  GaussianPlumeModel.cpp  GaussianPlumeModel.h  GaussianPuffModel.cpp  GaussianPuffModel.h  Grid3D.h  ISimulationModel.h  LeakSourceController.h  MainWindow.cpp  MainWindow.h  PlumeEngine.cpp  PlumeEngine.h  SimulationConfig.h  Simulator3D.cpp  Simulator3D.h  TerrainDem.cpp  TerrainDem.h  TerrainFlat.h  TerrainProcedural.h  TerrainSampler.h  main.cpp
